log e dfix
log e dfix